Made code Java8 compatible